// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorCard expect to render with error 1`] = `
<Card
  className="ins-error-card"
>
  <CardHeader>
    <NotEqualIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  </CardHeader>
  <CardBody>
    <div>
      Some kind of error
    </div>
  </CardBody>
</Card>
`;

exports[`ErrorCard expect to render without error 1`] = `
<Card
  className="ins-error-card"
>
  <CardHeader>
    <NotEqualIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  </CardHeader>
  <CardBody>
    <div />
  </CardBody>
</Card>
`;
